--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-mongodb",
+  "name": "next-with-apollo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "mongodb": "^4.9.1",
-    "next": "12.3.0",
-    "next-auth": "^4.10.3",
-    "next-session": "^4.0.5",
+    "apollo-server-micro": "^3.10.2",
+    "graphql": "^16.6.0",
+    "micro": "^9.4.1",
+    "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-tagcloud": "^2.3.1",
-    "util": "^0.12.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
-    "@types/react-tagcloud": "^1.1.7",
-    "autoprefixer": "^10.4.10",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1"
   }
 }
