--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "apollo-server-micro": "^3.10.2",
     "graphql": "^16.6.0",
     "micro": "^9.4.1",
@@ -17,7 +18,6 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "prisma": "^4.4.0"
   }
 }
