--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,16 +20,30 @@ services:
     command: --default-authentication-plugin=mysql_native_password --innodb-buffer-pool-size=2048M
     restart: unless-stopped
     environment:
-      - MYSQL_DATABASE=nextjs
-      - MYSQL_ROOT_USER=root
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_ROOT_USER=${MYSQL_ROOT_USER}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     security_opt:
-      - seccomp:unconfined      
+      - seccomp:unconfined   
+  minio:
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - ./minio_storage:/data
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    command: server --console-address ":9001" /data
+
 volumes:
+  minio_storage: {}
   mysql-data:
     driver: local          
       
