--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     container_name: nextjs
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.${APPLICATION_TYPE}
       # network: host
     volumes:
       - .:/opt/app
       - /opt/app/node_modules
       - /opt/app/.next
     ports:
-      - '3000:3000'
+      - '80:3000'
     depends_on:
       - mysql
   mysql:
