--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "md5": "^2.3.0",
     "micro": "^9.4.1",
     "next": "12.3.1",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
