--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "next-with-apollo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.4.0",
-    "apollo-server-micro": "^3.10.2",
-    "graphql": "^16.6.0",
-    "md5": "^2.3.0",
-    "micro": "^9.4.1",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "prisma": "^4.4.0"
-  }
+	"name": "next-with-apollo",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.4.0",
+		"apollo-server-micro": "^3.10.2",
+		"graphql": "^16.6.0",
+		"md5": "^2.3.0",
+		"micro": "^9.4.1",
+		"next": "12.3.1",
+		"nodemailer": "^6.9.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.20.2",
+		"babel-jest": "^29.4.3",
+		"jest": "^29.4.3",
+		"prisma": "^4.4.0"
+	}
 }
