--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,6 +14,7 @@ COPY package.json *.lock ./
 COPY prisma ./prisma/ 
 RUN yarn install --production
 RUN yarn add --dev eslint
+RUN yarn  prisma migrate dev --name init
 COPY . /opt/app
 
 RUN yarn build
