--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           SCRIPT_AFTER: |         
             cd menuOnline-backend
             make build
-            make prisma-migrate
+            docker exec -it nextjs sh -c 'yarn  prisma migrate dev --name init'
