--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,6 +15,6 @@ COPY prisma ./prisma/
 RUN yarn install --production
 RUN yarn add --dev eslint
 COPY . /opt/app
-RUN yarn  prisma migrate deploy --name init
+RUN yarn  prisma migrate deploy
 RUN yarn build
 CMD [ "yarn", "start" ]
