--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,6 @@ jobs:
           SCRIPT_AFTER: |         
             cd menuOnline-backend
             make build
+            echo "sleep 10 seconds"
+            sleep 10
+            make prisma-migrate
