--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: "./menuOnline-backend/"
+          SCRIPT_BEFORE: |
+            make prisma-migrate-deploy;         
           SCRIPT_AFTER: |         
             cd menuOnline-backend;
             make build;
