--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,6 +13,7 @@ COPY .eslintrc.json /opt/app/.eslintrc.json
 COPY package.json *.lock ./
 COPY prisma ./prisma/ 
 RUN yarn install --production
+RUN yarn prisma migrate deploy
 RUN yarn add --dev eslint
 COPY . /opt/app
 
