--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -12,7 +12,7 @@ COPY yarn.lock /opt/app
 COPY .eslintrc.json /opt/app/.eslintrc.json
 COPY package.json *.lock ./
 COPY prisma ./prisma/ 
-RUN npx prisma migrate deploy
+RUN npx prisma migrate dev
 RUN yarn install --production
 RUN yarn add --dev eslint
 COPY . /opt/app
